--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top_banner">
+        <div class="half_width">
+            <h1>Welcome To</h1>
+            <h1> <span class="name_color">Nieamul Kabir</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="hire_me" href="https://www.linkedin.com/in/nieamul-kabir-101b491b2/" target="_blank">HIRE ME</a>
+        </div>
+
+        <div class="half_width">
+            <img src="image/jhankar.png" alt="">
+        </div>
+
+    </section>
 </body>
+
 </html>
