--- a/index.html
+++ b/index.html
@@ -23,11 +23,28 @@
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.</p>
-            <a class="hire_me" href="https://www.linkedin.com/in/nieamul-kabir-101b491b2/" target="_blank">HIRE ME</a>
+            <a class="link_button" href="https://www.linkedin.com/in/nieamul-kabir-101b491b2/" target="_blank">HIRE
+                ME</a>
         </div>
 
         <div class="half_width">
             <img src="image/jhankar.png" alt="">
+        </div>
+
+    </section>
+
+
+    <section class="big_dream">
+        <div class="half_width">
+            <img src="image/jhankar2.png" alt="">
+        </div>
+
+        <div class="half_width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link_button" href="https://github.com/NieamulKabir" target="_blank">DOWNLOAD RESUME</a>
         </div>
 
     </section>
