--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top_banner">
+    <section class="top_banner flxible_container">
         <div class="half_width">
             <h1>Welcome To</h1>
             <h1> <span class="name_color">Nieamul Kabir</span> World!</h1>
@@ -34,7 +34,7 @@
     </section>
 
 
-    <section class="big_dream">
+    <section class="big_dream flxible_container">
         <div class="half_width">
             <img src="image/jhankar2.png" alt="">
         </div>
@@ -48,6 +48,34 @@
         </div>
 
     </section>
+
+    <section class="exprience_area">
+        <h1>Experiences</h1>
+        <div class="flxible_container">
+            <div id="full_stack_ex" class="exprience_iteam">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="name_color">2021-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+
+            </div>
+            <div id="Web_dev_ex" class="exprience_iteam">
+                <h2>Baby Web Developer</h2>
+                <h3 class="name_color">2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+
+        </div>
+
+
+    </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
